# logistic_map2

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: logistic_map2.ex
lib/logistic_map2/: logistic_map2_nif.ex
native/logisticmap2nif/: Cargo.toml  README.md
native/logisticmap2nif/src/: lib.rs
test/: logistic_map2_test.exs
