[package]
name = "logisticmap2nif"
version = "0.1.0"
authors = []

[lib]
name = "logisticmap2nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.release]
opt-level = 3
codegen-units = 1

[dependencies]
rustler = "0.18.0"
rustler_codegen = "0.18.0"
lazy_static = "1.0"
rayon = "1.0"
num_cpus = "1.0"
